--- a/IDE/XilinxSDK/2019_2/wolfCrypt_example/.project
+++ b/IDE/XilinxSDK/2019_2/wolfCrypt_example/.project
@@ -751,14 +751,64 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-aes-asm.S</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-aes-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-aes-asm.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-aes-asm.c</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-chacha-asm_c.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-chacha-asm_c.c</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-chacha-asm.S</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-chacha-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-curve25519_c.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-curve25519_c.c</locationURI>
+		</link>
+		<link>
 			<name>src/wolfcrypt/src/port/arm/armv8-32-curve25519.S</name>
 			<type>1</type>
 			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-curve25519.S</locationURI>
 		</link>
 		<link>
-			<name>src/wolfcrypt/src/port/arm/armv8-32-curve25519.c</name>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-poly1305-asm.S</name>
 			<type>1</type>
-			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-curve25519.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-poly1305-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-poly1305-asm.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-poly1305-asm.c</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-sha256-asm.S</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-sha256-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-sha256-asm.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-sha256-asm.c</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-sha3-asm.S</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-sha3-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-32-sha3-asm.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-sha3-asm.c</locationURI>
 		</link>
 		<link>
 			<name>src/wolfcrypt/src/port/arm/armv8-32-sha512-asm.S</name>
@@ -771,14 +821,29 @@
 			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-32-sha512-asm.c</locationURI>
 		</link>
 		<link>
-			<name>src/wolfcrypt/src/port/arm/armv8-aes.c</name>
+			<name>src/wolfcrypt/src/port/arm/armv8-aes-asm.S</name>
 			<type>1</type>
-			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-aes.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-aes-asm.S</locationURI>
 		</link>
 		<link>
-			<name>src/wolfcrypt/src/port/arm/armv8-chacha.c</name>
+			<name>src/wolfcrypt/src/port/arm/armv8-aes-asm.c</name>
 			<type>1</type>
-			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-chacha.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-aes-asm.c</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-chacha-asm_c.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-chacha-asm_c.c</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-chacha-asm.S</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-chacha-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-curve25519_c.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-curve25519_c.c</locationURI>
 		</link>
 		<link>
 			<name>src/wolfcrypt/src/port/arm/armv8-curve25519.S</name>
@@ -786,19 +851,34 @@
 			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-curve25519.S</locationURI>
 		</link>
 		<link>
-			<name>src/wolfcrypt/src/port/arm/armv8-curve25519.c</name>
+			<name>src/wolfcrypt/src/port/arm/armv8-poly1305-asm.S</name>
 			<type>1</type>
-			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-curve25519.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-poly1305-asm.S</locationURI>
 		</link>
 		<link>
-			<name>src/wolfcrypt/src/port/arm/armv8-poly1305.c</name>
+			<name>src/wolfcrypt/src/port/arm/armv8-poly1305-asm.c</name>
 			<type>1</type>
-			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-poly1305.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-poly1305-asm.c</locationURI>
 		</link>
 		<link>
-			<name>src/wolfcrypt/src/port/arm/armv8-sha256.c</name>
+			<name>src/wolfcrypt/src/port/arm/armv8-sha256-asm.S</name>
 			<type>1</type>
-			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-sha256.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-sha256-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-sha256-asm.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-sha256-asm.c</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-sha3-asm.S</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-sha3-asm.S</locationURI>
+		</link>
+		<link>
+			<name>src/wolfcrypt/src/port/arm/armv8-sha3-asm.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-sha3-asm.c</locationURI>
 		</link>
 		<link>
 			<name>src/wolfcrypt/src/port/arm/armv8-sha512-asm.S</name>
@@ -809,11 +889,6 @@
 			<name>src/wolfcrypt/src/port/arm/armv8-sha512-asm.c</name>
 			<type>1</type>
 			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-sha512-asm.c</locationURI>
-		</link>
-		<link>
-			<name>src/wolfcrypt/src/port/arm/armv8-sha512.c</name>
-			<type>1</type>
-			<locationURI>PARENT-4-PROJECT_LOC/wolfcrypt/src/port/arm/armv8-sha512.c</locationURI>
 		</link>
 		<link>
 			<name>src/wolfcrypt/src/port/arm/cryptoCell.c</name>
