Create initial Rust wrapper structure
Generate bindings to C library with bindgen
Add github CI workflow to build Rust wrapper

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ aclocal.m4
 aminclude.am
 lt*.m4
 Makefile.in
-Makefile
+/Makefile
 depcomp
 missing
 libtool
@@ -456,6 +456,9 @@ wrapper/Ada/alire/
 wrapper/Ada/config/
 wrapper/Ada/lib/
 wrapper/Ada/obj/
+
+# Rust wrapper files
+/wrapper/rust/*/target/
 
 # PlatformIO
 /**/.pio
