Add test case for --enable-coding=no.

--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -60,6 +60,7 @@ jobs:
           '--disable-sys-ca-certs',
           '--enable-all CPPFLAGS=-DWOLFSSL_DEBUG_CERTS ',
           '--enable-all CFLAGS="-DWOLFSSL_CHECK_MEM_ZERO"',
+          '--enable-coding=no',
         ]
     name: make check
     if: github.repository_owner == 'wolfssl'
